--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -21,11 +21,168 @@ library(readxl)
 ```
 
 ``` r
-trashwheel = read_excel(path="./Data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
+trashwheel =
+  read_excel(path="./Data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                         sheet = 1,
                         range ="A2:N338") %>% 
   janitor::clean_names() %>% 
   drop_na(dumpster) %>% 
   mutate(sports_balls = round(sports_balls, digits = 0)) %>% 
   mutate(sports_balls = as.integer(sports_balls))
+
+precipitation_2018 = 
+  read_excel(path="./Data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
+                        sheet = 3,
+                        range ="A2:B14") %>% 
+  janitor::clean_names()  %>%
+  drop_na(total) %>% 
+  mutate(year = 2018)
+
+precipitation_2017 = 
+  read_excel(path="./Data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
+                        sheet = 4,
+                        range ="A2:B14") %>% 
+  janitor::clean_names()  %>%
+  drop_na(total) %>% 
+  mutate(year = 2017)
+
+precipitation_full = full_join(precipitation_2017, precipitation_2018) %>% 
+  mutate(month = month.name[month])
 ```
+
+    ## Joining, by = c("month", "total", "year")
+
+``` r
+pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>% 
+  separate(mon,
+    c("year", "month", "day"), 
+    convert = TRUE) %>% 
+  mutate(prez_dem = recode(prez_dem, '1' = "dem")) %>% 
+  mutate(prez_gop = recode(prez_gop, '1' = "gop")) %>% 
+  pivot_longer(
+    c("prez_dem", "prez_gop"), 
+    values_to = "president", 
+    values_drop_na = TRUE
+  ) %>% 
+  mutate(month = month.name[month]) %>% 
+  select(-day)
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   mon = col_date(format = ""),
+    ##   prez_gop = col_double(),
+    ##   gov_gop = col_double(),
+    ##   sen_gop = col_double(),
+    ##   rep_gop = col_double(),
+    ##   prez_dem = col_double(),
+    ##   gov_dem = col_double(),
+    ##   sen_dem = col_double(),
+    ##   rep_dem = col_double()
+    ## )
+
+    ## Warning: Unreplaced values treated as NA as .x is not compatible. Please
+    ## specify replacements exhaustively or supply .default
+    
+    ## Warning: Unreplaced values treated as NA as .x is not compatible. Please
+    ## specify replacements exhaustively or supply .default
+
+``` r
+snp = read_csv("./Data/fivethirtyeight_datasets/snp.csv") %>% 
+  separate(date, 
+           c("month", "day", "year"),
+           convert = TRUE) %>%
+  mutate(month = month.name[month]) %>% 
+  select(year, month, -day, everything())
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   date = col_character(),
+    ##   close = col_double()
+    ## )
+
+``` r
+unemployment = read_csv("./Data/fivethirtyeight_datasets/unemployment.csv") %>% 
+  pivot_longer(Jan:Dec, 
+    names_to = "month",
+    values_to = "rate"
+  ) %>% 
+  mutate(month = match(month, month.abb)) %>% 
+  mutate(month = month.name[month]) %>%
+  mutate(Year = as.integer(Year)) %>%
+  janitor::clean_names()
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   Year = col_double(),
+    ##   Jan = col_double(),
+    ##   Feb = col_double(),
+    ##   Mar = col_double(),
+    ##   Apr = col_double(),
+    ##   May = col_double(),
+    ##   Jun = col_double(),
+    ##   Jul = col_double(),
+    ##   Aug = col_double(),
+    ##   Sep = col_double(),
+    ##   Oct = col_double(),
+    ##   Nov = col_double(),
+    ##   Dec = col_double()
+    ## )
+
+``` r
+merged_data = pols %>% 
+  left_join(snp, 
+    by = c("year", "month") 
+  ) %>% 
+  left_join(
+    unemployment,
+    by = c("year", "month")
+    )
+```
+
+Problem 3
+
+``` r
+popular_baby_names = read_csv("./Data/Popular_Baby_Names.csv") %>%
+  janitor::clean_names() %>% 
+  mutate(ethnicity = recode(ethnicity, "ASIAN AND PACI" = "ASIAN AND PACIFIC ISLANDER",
+                            "WHITE NON HISP" = "WHITE NON HISPANIC",
+                            "BLACK NON HISP" = "BLACK NON HISPANIC")) %>% 
+  mutate(childs_first_name = str_to_lower(childs_first_name)) %>% 
+  distinct()
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   `Year of Birth` = col_double(),
+    ##   Gender = col_character(),
+    ##   Ethnicity = col_character(),
+    ##   `Child's First Name` = col_character(),
+    ##   Count = col_double(),
+    ##   Rank = col_double()
+    ## )
+
+``` r
+olivia = popular_baby_names %>% 
+  filter(childs_first_name == "olivia") %>% 
+  select(-count) %>%
+  pivot_wider(
+    names_from = "year_of_birth",
+    values_from = "rank"
+  ) 
+
+most_popular_male = popular_baby_names %>% 
+  filter(rank == 1) %>% 
+  select(-count) %>% 
+  pivot_wider(
+    names_from = "year_of_birth",
+    values_from = "childs_first_name"
+  ) 
+```
+
+    ## Warning: Values in `childs_first_name` are not uniquely identified; output will contain list-cols.
+    ## * Use `values_fn = list(childs_first_name = list)` to suppress this warning.
+    ## * Use `values_fn = list(childs_first_name = length)` to identify where the duplicates arise
+    ## * Use `values_fn = list(childs_first_name = summary_fun)` to summarise duplicates
