Adding some text!

--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -1,24 +1,34 @@
 p8105\_hw2\_mk4208
 ================
 
+Loading required
+    packages
+
 ``` r
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ───────────────────────────────────────────────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ──────────────────────────────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
     ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
     ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
     ## ✔ readr   1.3.1     ✔ forcats 0.4.0
 
-    ## ── Conflicts ──────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ── Conflicts ─────────────────────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
 ``` r
 library(readxl)
 ```
+
+## Problem 1
+
+Importing Mr. Trash Wheel sheet and omitting non-data entries. Rows that
+do not include dumpster-specific data have been omitted. Number of
+sports balls have been rounded the nearest integer and the result has
+been converted to a numeric variable.
 
 ``` r
 trashwheel =
@@ -29,7 +39,14 @@ trashwheel =
   drop_na(dumpster) %>% 
   mutate(sports_balls = round(sports_balls, digits = 0)) %>% 
   mutate(sports_balls = as.integer(sports_balls))
+```
 
+# Precipitation data for 2018:
+
+Rows without precipitation data have been omitted. Year variable has
+been added.
+
+``` r
 precipitation_2018 = 
   read_excel(path="./Data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                         sheet = 3,
@@ -37,7 +54,14 @@ precipitation_2018 =
   janitor::clean_names()  %>%
   drop_na(total) %>% 
   mutate(year = 2018)
+```
 
+# Precipitation data for 2017:
+
+Rows without precipitation data have been omitted. Year variable has
+been added.
+
+``` r
 precipitation_2017 = 
   read_excel(path="./Data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                         sheet = 4,
@@ -45,12 +69,31 @@ precipitation_2017 =
   janitor::clean_names()  %>%
   drop_na(total) %>% 
   mutate(year = 2017)
+```
 
+Precipitation data for 2018 and 2017 have been merged and month name has
+been converted to a character
+variable.
+
+``` r
 precipitation_full = full_join(precipitation_2017, precipitation_2018) %>% 
   mutate(month = month.name[month])
 ```
 
     ## Joining, by = c("month", "total", "year")
+
+# Here is a short description of the 2 datasets:
+
+For the precipitation dataset, there are 19 observations. It contains
+the following variables: month, total, year. The total precipitation in
+the year 2018 was 56.43.
+
+For the Mr. Trash Wheel dataset, there are 285 observations. It contains
+the following variables: dumpster, month, year, date, weight\_tons,
+volume\_cubic\_yards, plastic\_bottles, polystyrene, cigarette\_butts,
+glass\_bottles, grocery\_bags, chip\_bags, sports\_balls,
+homes\_powered. The median number of sports balls in a dumpster in 2017
+was 8.
 
 ``` r
 pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>% 
@@ -173,16 +216,49 @@ olivia = popular_baby_names %>%
     values_from = "rank"
   ) 
 
+print(olivia)
+```
+
+    ## # A tibble: 4 x 9
+    ##   gender ethnicity childs_first_na… `2016` `2015` `2014` `2013` `2012`
+    ##   <chr>  <chr>     <chr>             <dbl>  <dbl>  <dbl>  <dbl>  <dbl>
+    ## 1 FEMALE ASIAN AN… olivia                1      1      1      3      3
+    ## 2 FEMALE BLACK NO… olivia                8      4      8      6      8
+    ## 3 FEMALE HISPANIC  olivia               13     16     16     22     22
+    ## 4 FEMALE WHITE NO… olivia                1      1      1      1      4
+    ## # … with 1 more variable: `2011` <dbl>
+
+``` r
 most_popular_male = popular_baby_names %>% 
-  filter(rank == 1) %>% 
+  filter(gender == "MALE") %>% 
+  filter(rank == 1) %>%
   select(-count) %>% 
   pivot_wider(
     names_from = "year_of_birth",
     values_from = "childs_first_name"
   ) 
+
+print(most_popular_male)
 ```
 
-    ## Warning: Values in `childs_first_name` are not uniquely identified; output will contain list-cols.
-    ## * Use `values_fn = list(childs_first_name = list)` to suppress this warning.
-    ## * Use `values_fn = list(childs_first_name = length)` to identify where the duplicates arise
-    ## * Use `values_fn = list(childs_first_name = summary_fun)` to summarise duplicates
+    ## # A tibble: 4 x 9
+    ##   gender ethnicity           rank `2016` `2015` `2014` `2013` `2012` `2011`
+    ##   <chr>  <chr>              <dbl> <chr>  <chr>  <chr>  <chr>  <chr>  <chr> 
+    ## 1 MALE   ASIAN AND PACIFIC…     1 ethan  jayden jayden jayden ryan   ethan 
+    ## 2 MALE   BLACK NON HISPANIC     1 noah   noah   ethan  ethan  jayden jayden
+    ## 3 MALE   HISPANIC               1 liam   liam   liam   jayden jayden jayden
+    ## 4 MALE   WHITE NON HISPANIC     1 joseph david  joseph david  joseph micha…
+
+``` r
+scatterplot = popular_baby_names %>% 
+  filter(gender ==  "MALE", 
+         ethnicity == "WHITE NON HISPANIC", 
+         year_of_birth == 2016) %>%
+  group_by(childs_first_name) %>%
+  ggplot(aes(x = rank, y = count)) +
+  geom_point()
+
+print(scatterplot) 
+```
+
+![](p8105_hw2_mk4208_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
