--- a/p8105_hw2_mk4208.Rmd
+++ b/p8105_hw2_mk4208.Rmd
@@ -7,11 +7,18 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+Loading required packages 
 
 ```{r}
 library(tidyverse)
 library(readxl)
 ```
+
+## Problem 1 
+
+Importing Mr. Trash Wheel sheet and omitting non-data entries. 
+Rows that do not include dumpster-specific data have been omitted. 
+Number of sports balls have been rounded the nearest integer and the result has been converted to a numeric variable. 
 
 ```{r}
 trashwheel =
@@ -22,7 +29,13 @@ trashwheel =
   drop_na(dumpster) %>% 
   mutate(sports_balls = round(sports_balls, digits = 0)) %>% 
   mutate(sports_balls = as.integer(sports_balls))
+```
 
+# Precipitation data for 2018:
+Rows without precipitation data have been omitted. 
+Year variable has been added.
+
+```{r}
 precipitation_2018 = 
   read_excel(path="./Data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                         sheet = 3,
@@ -30,7 +43,13 @@ precipitation_2018 =
   janitor::clean_names()  %>%
   drop_na(total) %>% 
   mutate(year = 2018)
+```
 
+# Precipitation data for 2017: 
+Rows without precipitation data have been omitted. 
+Year variable has been added. 
+
+```{r}
 precipitation_2017 = 
   read_excel(path="./Data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
                         sheet = 4,
@@ -38,10 +57,21 @@ precipitation_2017 =
   janitor::clean_names()  %>%
   drop_na(total) %>% 
   mutate(year = 2017)
+```
 
+Precipitation data for 2018 and 2017 have been merged and month name has been converted to a character variable. 
+
+```{r}
 precipitation_full = full_join(precipitation_2017, precipitation_2018) %>% 
   mutate(month = month.name[month])
 ```
+
+# Here is a short description of the 2 datasets: 
+For the precipitation dataset, there are `r nrow(precipitation_full)` observations. It contains the following variables: `r colnames(precipitation_full)`.
+The total precipitation in the year 2018 was `r sum(pull(precipitation_full, total))`. 
+
+For the Mr. Trash Wheel dataset, there are `r nrow(trashwheel)` observations. It contains the following variables: `r colnames(trashwheel)`.
+The median number of sports balls in a dumpster in 2017 was `r median(pull(filter(trashwheel, year == "2017"), sports_balls))`.
 
 ```{r}
 pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>% 
