--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -216,7 +216,7 @@ olivia = popular_baby_names %>%
     values_from = "rank"
   ) 
 
-print(olivia)
+olivia
 ```
 
     ## # A tibble: 4 x 9
@@ -237,17 +237,9 @@ most_popular_male = popular_baby_names %>%
     names_from = "year_of_birth",
     values_from = "childs_first_name"
   ) 
-
-print(most_popular_male)
 ```
 
-    ## # A tibble: 4 x 9
-    ##   gender ethnicity           rank `2016` `2015` `2014` `2013` `2012` `2011`
-    ##   <chr>  <chr>              <dbl> <chr>  <chr>  <chr>  <chr>  <chr>  <chr> 
-    ## 1 MALE   ASIAN AND PACIFIC…     1 ethan  jayden jayden jayden ryan   ethan 
-    ## 2 MALE   BLACK NON HISPANIC     1 noah   noah   ethan  ethan  jayden jayden
-    ## 3 MALE   HISPANIC               1 liam   liam   liam   jayden jayden jayden
-    ## 4 MALE   WHITE NON HISPANIC     1 joseph david  joseph david  joseph micha…
+AND I OOP
 
 ``` r
 scatterplot = popular_baby_names %>% 
@@ -261,4 +253,4 @@ scatterplot = popular_baby_names %>%
 print(scatterplot) 
 ```
 
-![](p8105_hw2_mk4208_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+![](p8105_hw2_mk4208_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
