--- a/p8105_hw2_mk4208.Rmd
+++ b/p8105_hw2_mk4208.Rmd
@@ -68,7 +68,7 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
 
 # Here is a short description of the 2 datasets: 
 For the precipitation dataset, there are `r nrow(precipitation_full)` observations. It contains the following variables: `r colnames(precipitation_full)`.
-The total precipitation in the year 2018 was `r sum(pull(precipitation_full, total))`. 
+The total precipitation in the year 2018 was `r sum(pull(precipitation_2018, total))`. 
 
 For the Mr. Trash Wheel dataset, there are `r nrow(trashwheel)` observations. It contains the following variables: `r colnames(trashwheel)`.
 The median number of sports balls in a dumpster in 2017 was `r median(pull(filter(trashwheel, year == "2017"), sports_balls))`.
@@ -126,17 +126,17 @@ popular_baby_names = read_csv("./Data/Popular_Baby_Names.csv") %>%
   mutate(childs_first_name = str_to_lower(childs_first_name)) %>% 
   distinct()
 
-olivia = popular_baby_names %>% 
+popular_baby_names %>% 
   filter(childs_first_name == "olivia") %>% 
   select(-count) %>%
   pivot_wider(
     names_from = "year_of_birth",
     values_from = "rank"
   ) 
+```
 
-print(olivia)
-
-most_popular_male = popular_baby_names %>% 
+```{r}
+popular_baby_names %>% 
   filter(gender == "MALE") %>% 
   filter(rank == 1) %>%
   select(-count) %>% 
@@ -144,8 +144,6 @@ most_popular_male = popular_baby_names %>%
     names_from = "year_of_birth",
     values_from = "childs_first_name"
   ) 
-
-print(most_popular_male)
 ```
 
 ```{r}
@@ -153,7 +151,6 @@ scatterplot = popular_baby_names %>%
   filter(gender ==  "MALE", 
          ethnicity == "WHITE NON HISPANIC", 
          year_of_birth == 2016) %>%
-  group_by(childs_first_name) %>%
   ggplot(aes(x = rank, y = count)) +
   geom_point()
 
