--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -1,5 +1,7 @@
 p8105\_hw2\_mk4208
 ================
+Meeraj Kothari
+3/10/2019
 
 Loading required
     packages
@@ -8,14 +10,14 @@ Loading required
 library(tidyverse)
 ```
 
-    ## ── Attaching packages ──────────────────────────────────────── tidyverse 1.2.1 ──
+    ## ── Attaching packages ─────────────────────────────────────────────────────────── tidyverse 1.2.1 ──
 
     ## ✔ ggplot2 3.2.1     ✔ purrr   0.3.2
     ## ✔ tibble  2.1.3     ✔ dplyr   0.8.3
     ## ✔ tidyr   1.0.0     ✔ stringr 1.4.0
     ## ✔ readr   1.3.1     ✔ forcats 0.4.0
 
-    ## ── Conflicts ─────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ── Conflicts ────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
     ## ✖ dplyr::filter() masks stats::filter()
     ## ✖ dplyr::lag()    masks stats::lag()
 
@@ -32,9 +34,9 @@ been converted to a numeric variable.
 
 ``` r
 trashwheel =
-  read_excel(path="./Data/HealthyHarborWaterWheelTotals2018-7-28.xlsx", 
-                        sheet = 1,
-                        range ="A2:N338") %>% 
+  read_excel(path="./Data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",
+             sheet = 1,
+             range ="A2:N408") %>% 
   janitor::clean_names() %>% 
   drop_na(dumpster) %>% 
   mutate(sports_balls = round(sports_balls, digits = 0)) %>% 
@@ -84,16 +86,22 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
 
 # Here is a short description of the 2 datasets:
 
-For the precipitation dataset, there are 19 observations. It contains
-the following variables: month, total, year. The total precipitation in
-the year 2018 was 56.43.
+  - For the precipitation dataset, there are **19 observations**.
 
-For the Mr. Trash Wheel dataset, there are 285 observations. It contains
-the following variables: dumpster, month, year, date, weight\_tons,
-volume\_cubic\_yards, plastic\_bottles, polystyrene, cigarette\_butts,
-glass\_bottles, grocery\_bags, chip\_bags, sports\_balls,
-homes\_powered. The median number of sports balls in a dumpster in 2017
-was 8.
+  - It contains the following variables: **month, total, year**.
+
+  - The total precipitation in the year 2018 was **23.5**.
+
+  - For the Mr. Trash Wheel dataset, there are **344 observations**.
+
+  - It contains the following variables: **dumpster, month, year, date,
+    weight\_tons, volume\_cubic\_yards, plastic\_bottles, polystyrene,
+    cigarette\_butts, glass\_bottles, grocery\_bags, chip\_bags,
+    sports\_balls, homes\_powered**.
+
+  - The median number of sports balls in a dumpster in 2017 was **8**.
+
+<!-- end list -->
 
 ``` r
 pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>% 
@@ -185,7 +193,11 @@ merged_data = pols %>%
     )
 ```
 
-Problem 3
+# Problem 3:
+
+Loading the popular baby names dataset. Recoding the inconsistent
+ethinicity observations. Fixing the case structure of string varaibles.
+Removing duplicates using the distinct() function.
 
 ``` r
 popular_baby_names = read_csv("./Data/Popular_Baby_Names.csv") %>%
@@ -193,7 +205,9 @@ popular_baby_names = read_csv("./Data/Popular_Baby_Names.csv") %>%
   mutate(ethnicity = recode(ethnicity, "ASIAN AND PACI" = "ASIAN AND PACIFIC ISLANDER",
                             "WHITE NON HISP" = "WHITE NON HISPANIC",
                             "BLACK NON HISP" = "BLACK NON HISPANIC")) %>% 
-  mutate(childs_first_name = str_to_lower(childs_first_name)) %>% 
+  mutate(childs_first_name = str_to_lower(childs_first_name),
+         ethnicity = str_to_lower(ethnicity), 
+         gender = str_to_lower(gender)) %>% 
   distinct()
 ```
 
@@ -207,50 +221,67 @@ popular_baby_names = read_csv("./Data/Popular_Baby_Names.csv") %>%
     ##   Rank = col_double()
     ## )
 
+Following table shows the rank in popularity of the name “Olivia” as a
+female baby name over time. Rows contain ethnicities and columns contain
+year.
+
 ``` r
-olivia = popular_baby_names %>% 
+popular_baby_names %>% 
   filter(childs_first_name == "olivia") %>% 
   select(-count) %>%
   pivot_wider(
     names_from = "year_of_birth",
     values_from = "rank"
-  ) 
-
-olivia
+  ) %>% 
+  knitr::kable()
 ```
 
-    ## # A tibble: 4 x 9
-    ##   gender ethnicity childs_first_na… `2016` `2015` `2014` `2013` `2012`
-    ##   <chr>  <chr>     <chr>             <dbl>  <dbl>  <dbl>  <dbl>  <dbl>
-    ## 1 FEMALE ASIAN AN… olivia                1      1      1      3      3
-    ## 2 FEMALE BLACK NO… olivia                8      4      8      6      8
-    ## 3 FEMALE HISPANIC  olivia               13     16     16     22     22
-    ## 4 FEMALE WHITE NO… olivia                1      1      1      1      4
-    ## # … with 1 more variable: `2011` <dbl>
+| gender | ethnicity                  | childs\_first\_name | 2016 | 2015 | 2014 | 2013 | 2012 | 2011 |
+| :----- | :------------------------- | :------------------ | ---: | ---: | ---: | ---: | ---: | ---: |
+| female | asian and pacific islander | olivia              |    1 |    1 |    1 |    3 |    3 |    4 |
+| female | black non hispanic         | olivia              |    8 |    4 |    8 |    6 |    8 |   10 |
+| female | hispanic                   | olivia              |   13 |   16 |   16 |   22 |   22 |   18 |
+| female | white non hispanic         | olivia              |    1 |    1 |    1 |    1 |    4 |    2 |
+
+Follwing table shows the most popular name among male children over
+time.
 
 ``` r
-most_popular_male = popular_baby_names %>% 
-  filter(gender == "MALE") %>% 
+popular_baby_names %>% 
+  filter(gender == "male") %>% 
   filter(rank == 1) %>%
   select(-count) %>% 
   pivot_wider(
     names_from = "year_of_birth",
     values_from = "childs_first_name"
-  ) 
+  ) %>% 
+  knitr::kable()
 ```
 
-AND I OOP
+| gender | ethnicity                  | rank | 2016   | 2015   | 2014   | 2013   | 2012   | 2011    |
+| :----- | :------------------------- | ---: | :----- | :----- | :----- | :----- | :----- | :------ |
+| male   | asian and pacific islander |    1 | ethan  | jayden | jayden | jayden | ryan   | ethan   |
+| male   | black non hispanic         |    1 | noah   | noah   | ethan  | ethan  | jayden | jayden  |
+| male   | hispanic                   |    1 | liam   | liam   | liam   | jayden | jayden | jayden  |
+| male   | white non hispanic         |    1 | joseph | david  | joseph | david  | joseph | michael |
+
+##### For male, white non-hipsanic children born in 2016:
+
+Following is a scatter plot showing the number of children with a name
+(y axis) against the rank in popularity of that name (x axis)
 
 ``` r
-scatterplot = popular_baby_names %>% 
-  filter(gender ==  "MALE", 
-         ethnicity == "WHITE NON HISPANIC", 
+popular_baby_names %>% 
+  filter(gender ==  "male", 
+         ethnicity == "white non hispanic", 
          year_of_birth == 2016) %>%
-  group_by(childs_first_name) %>%
   ggplot(aes(x = rank, y = count)) +
-  geom_point()
-
-print(scatterplot) 
+  geom_point(colour="purple") + 
+  geom_text(aes(label=childs_first_name),
+            hjust=1, 
+            vjust=1, 
+            check_overlap = TRUE,
+            size = 4)
 ```
 
-![](p8105_hw2_mk4208_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+![](p8105_hw2_mk4208_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
