--- a/p8105_hw2_mk4208.Rmd
+++ b/p8105_hw2_mk4208.Rmd
@@ -68,11 +68,13 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
 ```
 
 # Here is a short description of the 2 datasets: 
-* For the precipitation dataset, there are **`r nrow(precipitation_full)` observations**.
+###### For the precipitation dataset:
+* There are **`r nrow(precipitation_full)` observations**.
 * It contains the following variables: **`r colnames(precipitation_full)`**.
 * The total precipitation in the year 2018 was **`r sum(pull(precipitation_2018, total))`**. 
 
-* For the Mr. Trash Wheel dataset, there are **`r nrow(trashwheel)` observations**.
+###### For the Mr. Trash Wheel dataset, 
+* There are **`r nrow(trashwheel)` observations**.
 * It contains the following variables: **`r colnames(trashwheel)`**.
 * The median number of sports balls in a dumpster in 2017 was **`r median(pull(filter(trashwheel, year == "2017"), sports_balls))`**.
 
@@ -169,12 +171,12 @@ popular_baby_names %>%
          ethnicity == "white non hispanic", 
          year_of_birth == 2016) %>%
   ggplot(aes(x = rank, y = count)) +
-  geom_point(colour="purple") + 
+  geom_point(colour="pink") + 
   geom_text(aes(label=childs_first_name),
             hjust=1, 
             vjust=1, 
             check_overlap = TRUE,
-            size = 4)
+            size = 2.4)
 ```
 
 
