--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -86,19 +86,19 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
 
 # Here is a short description of the 2 datasets:
 
-  - For the precipitation dataset, there are **19 observations**.
+###### For the precipitation dataset:
 
+  - There are **19 observations**.
   - It contains the following variables: **month, total, year**.
-
   - The total precipitation in the year 2018 was **23.5**.
 
-  - For the Mr. Trash Wheel dataset, there are **344 observations**.
+###### For the Mr. Trash Wheel dataset,
 
+  - There are **344 observations**.
   - It contains the following variables: **dumpster, month, year, date,
     weight\_tons, volume\_cubic\_yards, plastic\_bottles, polystyrene,
     cigarette\_butts, glass\_bottles, grocery\_bags, chip\_bags,
     sports\_balls, homes\_powered**.
-
   - The median number of sports balls in a dumpster in 2017 was **8**.
 
 <!-- end list -->
@@ -276,12 +276,12 @@ popular_baby_names %>%
          ethnicity == "white non hispanic", 
          year_of_birth == 2016) %>%
   ggplot(aes(x = rank, y = count)) +
-  geom_point(colour="purple") + 
+  geom_point(colour="pink") + 
   geom_text(aes(label=childs_first_name),
             hjust=1, 
             vjust=1, 
             check_overlap = TRUE,
-            size = 4)
+            size = 2.4)
 ```
 
 ![](p8105_hw2_mk4208_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
