--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -276,12 +276,12 @@ popular_baby_names %>%
          ethnicity == "white non hispanic", 
          year_of_birth == 2016) %>%
   ggplot(aes(x = rank, y = count)) +
-  geom_point(colour="pink") + 
+  geom_point(colour="blue") + 
   geom_text(aes(label=childs_first_name),
             hjust=1, 
             vjust=1, 
             check_overlap = TRUE,
-            size = 1)
+            size = 2.4)
 ```
 
 ![](p8105_hw2_mk4208_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
