--- a/p8105_hw2_mk4208.Rmd
+++ b/p8105_hw2_mk4208.Rmd
@@ -9,7 +9,7 @@ date: 3/10/2019
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Loading required packages 
+##### Loading required packages 
 
 ```{r}
 library(tidyverse)
