--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -3,8 +3,7 @@ p8105\_hw2\_mk4208
 Meeraj Kothari
 3/10/2019
 
-Loading required
-    packages
+##### Loading required packages
 
 ``` r
 library(tidyverse)
