--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -24,7 +24,7 @@ library(tidyverse)
 library(readxl)
 ```
 
-## Problem 1
+# Problem 1
 
 Importing Mr. Trash Wheel sheet and omitting non-data entries. Rows that
 do not include dumpster-specific data have been omitted. Number of
@@ -42,7 +42,7 @@ trashwheel =
   mutate(sports_balls = as.integer(sports_balls))
 ```
 
-# Precipitation data for 2018:
+## Precipitation data for 2018:
 
 Rows without precipitation data have been omitted. Year variable has
 been added.
@@ -57,7 +57,7 @@ precipitation_2018 =
   mutate(year = 2018)
 ```
 
-# Precipitation data for 2017:
+## Precipitation data for 2017:
 
 Rows without precipitation data have been omitted. Year variable has
 been added.
@@ -83,7 +83,7 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
 
     ## Joining, by = c("month", "total", "year")
 
-# Here is a short description of the 2 datasets:
+## Here is a short description of the 2 datasets:
 
 ###### For the precipitation dataset:
 
