--- a/p8105_hw2_mk4208.Rmd
+++ b/p8105_hw2_mk4208.Rmd
@@ -16,7 +16,7 @@ library(tidyverse)
 library(readxl)
 ```
 
-## Problem 1 
+# Problem 1 
 Importing Mr. Trash Wheel sheet and omitting non-data entries. 
 Rows that do not include dumpster-specific data have been omitted. 
 Number of sports balls have been rounded the nearest integer and the result has been converted to a numeric variable. 
@@ -32,7 +32,7 @@ trashwheel =
   mutate(sports_balls = as.integer(sports_balls))
 ```
 
-# Precipitation data for 2018:
+## Precipitation data for 2018:
 Rows without precipitation data have been omitted. 
 Year variable has been added.
 
@@ -46,7 +46,7 @@ precipitation_2018 =
   mutate(year = 2018)
 ```
 
-# Precipitation data for 2017: 
+## Precipitation data for 2017: 
 Rows without precipitation data have been omitted. 
 Year variable has been added. 
 
@@ -67,7 +67,7 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
   mutate(month = month.name[month])
 ```
 
-# Here is a short description of the 2 datasets: 
+## Here is a short description of the 2 datasets: 
 ###### For the precipitation dataset:
 * There are **`r nrow(precipitation_full)` observations**.
 * It contains the following variables: **`r colnames(precipitation_full)`**.
