--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -42,6 +42,17 @@ trashwheel =
   mutate(sports_balls = as.integer(sports_balls))
 ```
 
+## Here is a short description of the dataset:
+
+###### For the Mr. Trash Wheel dataset,
+
+  - There are **344 observations**.
+  - It contains the following variables: **dumpster, month, year, date,
+    weight\_tons, volume\_cubic\_yards, plastic\_bottles, polystyrene,
+    cigarette\_butts, glass\_bottles, grocery\_bags, chip\_bags,
+    sports\_balls, homes\_powered**.
+  - The median number of sports balls in a dumpster in 2017 was **8**.
+
 ## Precipitation data for 2018:
 
 Rows without precipitation data have been omitted. Year variable has
@@ -83,7 +94,7 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
 
     ## Joining, by = c("month", "total", "year")
 
-## Here is a short description of the 2 datasets:
+## Here is a short description of the dataset:
 
 ###### For the precipitation dataset:
 
@@ -91,16 +102,16 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
   - It contains the following variables: **month, total, year**.
   - The total precipitation in the year 2018 was **23.5**.
 
-###### For the Mr. Trash Wheel dataset,
+-----
 
-  - There are **344 observations**.
-  - It contains the following variables: **dumpster, month, year, date,
-    weight\_tons, volume\_cubic\_yards, plastic\_bottles, polystyrene,
-    cigarette\_butts, glass\_bottles, grocery\_bags, chip\_bags,
-    sports\_balls, homes\_powered**.
-  - The median number of sports balls in a dumpster in 2017 was **8**.
+## Loading pols, snp and unemployment datasets…
 
-<!-- end list -->
+### For the pols dataset:
+
+The month variable is separated into “year”, “month” and “day”. A new
+variable “President” has been added taking values from prez\_dem and
+prez\_gop. The values of the month variable have been converted to
+characters. Day variable has been removed.
 
 ``` r
 pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>% 
@@ -137,6 +148,12 @@ pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>%
     ## Warning: Unreplaced values treated as NA as .x is not compatible. Please
     ## specify replacements exhaustively or supply .default
 
+### For the snp dataset:
+
+The date variable is separated into “month”, “day” and “year”. The
+values of the month variable have been converted to characters. The year
+and month variables have been rearranged. Day variable has been removed.
+
 ``` r
 snp = read_csv("./Data/fivethirtyeight_datasets/snp.csv") %>% 
   separate(date, 
@@ -151,6 +168,13 @@ snp = read_csv("./Data/fivethirtyeight_datasets/snp.csv") %>%
     ##   date = col_character(),
     ##   close = col_double()
     ## )
+
+### For the unemployment dataset:
+
+A new variable month has been created taking values from the Jan to Dec
+column names. The month variable has been formatted to character
+variable using month,name. Year variable has been converted to
+integer.
 
 ``` r
 unemployment = read_csv("./Data/fivethirtyeight_datasets/unemployment.csv") %>% 
@@ -181,6 +205,9 @@ unemployment = read_csv("./Data/fivethirtyeight_datasets/unemployment.csv") %>%
     ##   Dec = col_double()
     ## )
 
+The following code chunk merges `snp` into `pols` and then
+`unexmployment` into the result.
+
 ``` r
 merged_data = pols %>% 
   left_join(snp, 
@@ -191,6 +218,16 @@ merged_data = pols %>%
     by = c("year", "month")
     )
 ```
+
+## Here is a short description of the dataset:
+
+###### For the merged dataset:
+
+  - There are **817 observations** and **13 columns**.
+  - The range of years is from **1947 to 2015**.
+  - It contains the following variables: **year, month, gov\_gop,
+    sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem, name, president,
+    day, close, rate**.
 
 # Problem 3:
 
@@ -283,4 +320,4 @@ popular_baby_names %>%
             size = 2.4)
 ```
 
-![](p8105_hw2_mk4208_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+![](p8105_hw2_mk4208_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
