--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -104,9 +104,9 @@ precipitation_full = full_join(precipitation_2017, precipitation_2018) %>%
 
 -----
 
-## Loading pols, snp and unemployment datasets…
+## Loading `pols`, `snp` and `unemployment` datasets…
 
-### For the pols dataset:
+### For the `pols` dataset:
 
 The month variable is separated into “year”, “month” and “day”. A new
 variable “President” has been added taking values from prez\_dem and
@@ -148,7 +148,14 @@ pols = read_csv("./Data/fivethirtyeight_datasets/pols-month.csv") %>%
     ## Warning: Unreplaced values treated as NA as .x is not compatible. Please
     ## specify replacements exhaustively or supply .default
 
-### For the snp dataset:
+##### Here is a short description of the dataset:
+
+  - There are **817 observations** and **10 columns**.
+  - The range of years is from **1947 to 2015**.
+  - It contains the following variables: **year, month, gov\_gop,
+    sen\_gop, rep\_gop, gov\_dem, sen\_dem, rep\_dem, name, president**.
+
+### For the `snp` dataset:
 
 The date variable is separated into “month”, “day” and “year”. The
 values of the month variable have been converted to characters. The year
@@ -169,7 +176,13 @@ snp = read_csv("./Data/fivethirtyeight_datasets/snp.csv") %>%
     ##   close = col_double()
     ## )
 
-### For the unemployment dataset:
+##### Here is a short description of the dataset:
+
+  - There are **787 observations** and **4 columns**.
+  - The range of years is from **1950 to 2015**.
+  - It contains the following variables: **year, month, day, close**.
+
+### For the `unemployment` dataset:
 
 A new variable month has been created taking values from the Jan to Dec
 column names. The month variable has been formatted to character
@@ -205,6 +218,14 @@ unemployment = read_csv("./Data/fivethirtyeight_datasets/unemployment.csv") %>%
     ##   Dec = col_double()
     ## )
 
+##### Here is a short description of the dataset:
+
+  - There are **816 observations** and **3 columns**.
+  - The range of years is from **1948 to 2015**.
+  - It contains the following variables: **year, month, rate**.
+
+-----
+
 The following code chunk merges `snp` into `pols` and then
 `unexmployment` into the result.
 
@@ -219,7 +240,7 @@ merged_data = pols %>%
     )
 ```
 
-## Here is a short description of the dataset:
+##### Here is a short description of the dataset:
 
 ###### For the merged dataset:
 
