--- a/p8105_hw2_mk4208.md
+++ b/p8105_hw2_mk4208.md
@@ -322,7 +322,7 @@ popular_baby_names %>%
 | male   | hispanic                   |    1 | liam   | liam   | liam   | jayden | jayden | jayden  |
 | male   | white non hispanic         |    1 | joseph | david  | joseph | david  | joseph | michael |
 
-##### For male, white non-hipsanic children born in 2016:
+##### For male, white non-hispanic children born in 2016:
 
 Following is a scatter plot showing the number of children with a name
 (y axis) against the rank in popularity of that name (x axis)
