--- a/p8105_hw2_mk4208.Rmd
+++ b/p8105_hw2_mk4208.Rmd
@@ -209,7 +209,7 @@ popular_baby_names %>%
   knitr::kable()
 ```
 
-##### For male, white non-hipsanic children born in 2016: 
+##### For male, white non-hispanic children born in 2016: 
 Following is a scatter plot showing the number of children with a name (y axis) against the rank in popularity of that name (x axis) 
 
 ```{r}
